# CdnScanner

./: .gitignore  README.md  TAURI.md  build-portable.bat  build-tauri-android.bat  build-tauri.bat  build-tauri.ps1  build.bat  eslint.config.mjs  next.config.ts  package-lock.json  package.json  release-notes-v1.1.0.md  release-notes.md  start-tauri.bat  start-web.bat  start.ps1  vitest.config.ts  vitest.setup.ts
.github/workflows/: android-release.yml
scripts/: build-static.js  capture-gif.js  fix-line-endings.py  make-icons.sh  stitch-gif.js  toggle-api.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/keystore/: README.md  keystore.properties.example
src-tauri/src/: lib.rs  main.rs  scanner.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/scanner/start/: route.ts
src/app/api/scanner/stop/: route.ts
src/components/scanner/: export-dialog.tsx  http-scanner-dialog.tsx  platform-grid.tsx  sample-config-dialog.tsx  scan-results.tsx  scanner-shell.tsx  settings-dialog.tsx  stats-cards.tsx  status-panel.tsx
src/components/ui/: dialog.tsx  switch.tsx  tabs.tsx
src/lib/scanner/: client-scanner.ts  export.ts  native-scanner.ts  platforms.ts  sample-config.ts  server-scanner.ts  sse-client.ts  store.ts  types.ts
src/lib/scanner/__tests__/: client-scanner.test.ts  native-scanner.test.ts  test-utils.ts
