[package]
name = "sni-scanner"
version = "1.0.0"
description = "SNI Scanner - Find clean IPs for V2Ray"
authors = ["you"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "sni_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
